# phaselimiter

./: .gitignore  .gitmodules  .rubocop.yml  CMakeLists.txt  Dockerfile  Gemfile  LICENSE  Pipfile  README.md  cppcheck_suppressions.txt
.circleci/: config.yml  drop_caches.sh  oom_exec.sh  release_files.txt  run_cppcheck.sh
.circleci/executable_licenses/: ipp.txt
.circleci/licenses/: armadillo.txt  benchmark.txt  boost.txt  cimg.txt  eigen.txt  gflags.txt  googletest.txt  hnsw.txt  libbz2.txt  libsimdpp.txt  libsndfile.txt  optim.txt  phaselimiter.txt  picojson.txt  zstd.txt
.github/workflows/: build-mac.yml  build-win.yml  build.yml
prebuilt/win64/libsndfile-1.2.2-win64/include/: sndfile.hh
prebuilt/win64/optim/header_only_version/: optim.hpp
prebuilt/win64/optim/header_only_version/unconstrained/: de.hpp  de_prmm.hpp  nm.hpp  pso.hpp  pso_dv.hpp
resource/: detection_preparation_classical.json  detection_preparation_jazz.json  detection_preparation_pop.json  mastering_reference.json  progression_mapping.json
script/: analyze_phase_limiter.rb  anonymize_analysis_data_path.rb  anonymize_detection_preparation.rb  audio_detector  create_reference.py  install_linux.sh  install_mac.sh  linux_shell.sh  remove_analysis_data_ffprobe.rb
spec/: audio_analyzer_spec.rb  phase_limiter_spec.rb
src/audio_analyzer/: acoustic_entropy.h  dynamics.h  main.cpp  multiband_histogram.h  nmf_spectrogram.h  peak.h  reverb.h  rhythm_spectrogram.h  single_mode.h  sound_quality2_find_nn.cpp  sound_quality2_preparation.cpp  spectrogram.h  spectrum.h  spectrum_distribution.h  spectrum_distribution_base_image.cpp  spectrum_distribution_base_image.h  statistics.h  stereo.h  test_dft.cpp  test_sound_quality.cpp  waveform.h
src/audio_visualizer/: main.cpp
src/bench/: dft2.cpp  fir_filter_bank.cpp  grad.cpp  grad_calculator.cpp  lof.cpp  memory.cpp  utils.h  vector_math.cpp
src/build_test/: main.cpp
src/clear_mixer/: main.cpp
src/effect_test/: main.cpp
src/phase_limiter/: GradCalculator.h  GradCore.h  auto_mastering.cpp  auto_mastering.h  auto_mastering2.cpp  auto_mastering3.cpp  auto_mastering5.cpp  config.h  enhancement.cpp  enhancement.h  equalization.cpp  equalization.h  freq_expander.cpp  freq_expander.h  main.cpp  pre_compression.cpp  pre_compression.h  resampling.cpp  resampling.h  test_grad.cpp  test_grad_calculator.cpp  test_perfect_hash_power_of_2.cpp  wave_utils.h
src/snd_file_info/: main.cpp
src/spectrogram/: main.cpp
src/test/: clear_mixer_filter3.cpp  clear_mixer_filter4.cpp  delay_filter2.cpp  example.cpp  fir_filter_bank.cpp  fir_resample_filter.cpp  lof.cpp  loudness.cpp  main.cpp  old_tests.cpp  peak.cpp  sound_quality2.cpp  temporary_memory.cpp  utils.cpp  vector_math.cpp
